producer app change conf and remove dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,38 +3,43 @@ server.port=8080
 primary.mongodb.host=127.0.0.1
 primary.mongodb.port=27017
 primary.mongodb.database=biotec
-primary.mongodb.replicaSet=rs
-#spring.data.mongodb.uri=mongodb://localhost:27017/biotec?replicaSet=rs"
 #secondary.mongodb.host=127.0.0.1
 #secondary.mongodb.port=27017
 #secondary.mongodb.database=springbatch
+
+#Graphql conf
 graphql.spqr.gui.enabled=true
+
+#AMQP RabbitMQ configuration
 spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+# Message Queue specific configs for app1
 app1.exchange.name=app1-exchange
 app1.queue.name=app1-queue
 app1.routing.key=app1-routing-key
+
+# Message Queue specific configs for app2
 app2.exchange.name=app2-exchange
 app2.queue.name=app2-queue
 app2.routing.key=app2-routing-key
+
 spring.main.allow-bean-definition-overriding=true
-spring.application.name=Producer
+
 #eureka spring client
-#spring.profiles.active=actuator-endpoints
+spring.profiles.active=production
+spring.application.name=Producer
 spring.boot.admin.client.url=http://localhost:8761
-spring.boot.admin.routes.endpoints=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,loggers,auditevents,hystrix.stream,activiti
-management.trace.http.enabled=true
 spring.boot.admin.client.username=admin
 spring.boot.admin.client.password=admin
-spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name:client}
-spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password:client}
+spring.boot.admin.client.instance.metadata.user.name=client
+spring.boot.admin.client.instance.metadata.user.password=clientPassword
 management.endpoints.web.exposure.include=*
-#management.endpoints.web.base-path=/manage
-management.endpoint.health.show-details=ALWAYS
-#logs
-logging.file=target/IC-Producer.log
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.show-details=always
+logging.file=target/Producer.log
 #logging.level.root=debug
 #logging.level.org.springframework=INFO
 #spring.security.user.name=user
