add facade layer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,15 @@ logging.file=target/Producer.log
 #logging.level.org.springframework=INFO
 #spring.security.user.name=user
 #spring.security.user.password=user
+
+
+#ICMP
+monitor.ipaddress=192.168.137.218
+
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
+info.api.resturl=http://localhost:8080/swagger-ui.html#
+info.api.graphql=http://localhost:8080/gui
