add facade layer graphql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=8080
 #mongo db configuration details
-primary.mongodb.host=127.0.0.1
+#127.0.0.1
+primary.mongodb.uri=mongodb+srv://danielvayu:admin@cluster0-8mm27.mongodb.net/biotec?retryWrites=true&w=majority
+primary.mongodb.host=cluster0-8mm27.mongodb.net
 primary.mongodb.port=27017
 primary.mongodb.database=biotec
+primary.mongodb.userName=danielvayu
+primary.mongodb.password=admin
 #secondary.mongodb.host=127.0.0.1
 #secondary.mongodb.port=27017
 #secondary.mongodb.database=springbatch
