--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,20 @@
-language: java
-jdk: openjdk11
-
-install: true
-script:
-  - mvnw clean install
-  - mvnw test
-
-after_success:
-  - mvn compile jib:build -Djib.to.image=registry.hub.docker.com/vayusense/ic:lastest -Djib.to.auth.username=$USERHUB -Djib.to.auth.password=$PASSHUB
+{
+  "language": "java",
+  "os": [
+    "linux"
+  ],
+  "dist": "xenial",
+  "jdk": [
+    "openjdk11"
+  ],
+  "install": [
+    "true"
+  ],
+  "script": [
+    "mvnw clean install",
+    "mvnw test"
+  ],
+  "after_success": [
+    "mvn compile jib:build -Djib.to.image=registry.hub.docker.com/vayusense/ic:lastest -Djib.to.auth.username=$USERHUB -Djib.to.auth.password=$PASSHUB"
+  ]
+}
