Entities and dto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 #mongo db configuration details
 #127.0.0.1
 primary.mongodb.uri=mongodb+srv://danielvayu:admin@cluster0-8mm27.mongodb.net/biotec?retryWrites=true&w=majority
-primary.mongodb.host=cluster0-8mm27.mongodb.net
+primary.mongodb.host=127.0.0.1
 primary.mongodb.port=27017
 primary.mongodb.database=biotec
 primary.mongodb.userName=danielvayu
@@ -15,10 +15,11 @@ primary.mongodb.password=admin
 graphql.spqr.gui.enabled=true
 
 #AMQP RabbitMQ configuration
-spring.rabbitmq.host=127.0.0.1
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.addresses=amqps://tfqajxis:sEYFg6OkFrzKZs93BddQtI3MXf04_dZQ@kangaroo.rmq.cloudamqp.com/tfqajxis
+#spring.rabbitmq.host=127.0.0.1
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 
 # Message Queue specific configs for app1
 app1.exchange.name=app1-exchange
