Entities and dto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 #mongo db configuration details
-#127.0.0.1
+#127.0.0.1 mongodb+srv://danielvayu:admin@cluster0-8mm27.mongodb.net/biotec?retryWrites=true&w=majority
 primary.mongodb.uri=mongodb+srv://danielvayu:admin@cluster0-8mm27.mongodb.net/biotec?retryWrites=true&w=majority
 primary.mongodb.host=127.0.0.1
 primary.mongodb.port=27017
