add 3 services for logs unit too

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,6 @@ primary.mongodb.port=27017
 primary.mongodb.database=biotec
 primary.mongodb.userName=danielvayu
 primary.mongodb.password=admin
-#secondary.mongodb.host=127.0.0.1
-#secondary.mongodb.port=27017
-#secondary.mongodb.database=springbatch
-
-#Graphql conf
-graphql.spqr.gui.enabled=true
 
 #AMQP RabbitMQ configuration
 spring.rabbitmq.addresses=amqps://tfqajxis:sEYFg6OkFrzKZs93BddQtI3MXf04_dZQ@kangaroo.rmq.cloudamqp.com/tfqajxis
@@ -21,15 +15,20 @@ spring.rabbitmq.addresses=amqps://tfqajxis:sEYFg6OkFrzKZs93BddQtI3MXf04_dZQ@kang
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
 
-# Message Queue specific configs for app1
-app1.exchange.name=app1-exchange
-app1.queue.name=app1-queue
-app1.routing.key=app1-routing-key
+# Message Queue specific configs for state
+app1.exchange.name=stateteva-exchange
+app1.queue.name=stateteva
+app1.routing.key=stateteva-routing-key
 
-# Message Queue specific configs for app2
-app2.exchange.name=app2-exchange
-app2.queue.name=app2-queue
-app2.routing.key=app2-routing-key
+# Message Queue specific configs for log
+app2.exchange.name=logteva-exchange
+app2.queue.name=logteva
+app2.routing.key=logteva-routing-key
+
+# Message Queue specific configs for unit
+app3.exchange.name=unitteva-exchange
+app3.queue.name=unitteva
+app3.routing.key=unitteva-routing-key
 
 spring.main.allow-bean-definition-overriding=true
 
